implemented recusrive crawling

--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
   },
   "dependencies": {
     "cheerio": "^0.22.0",
+    "content-type": "^1.0.2",
     "lodash": "^4.17.4",
-    "request": "^2.79.0"
+    "request": "^2.79.0",
+    "urijs": "^1.18.4"
   }
 }
