--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "content-type": "^1.0.2",
     "lodash": "^4.17.4",
     "request": "^2.79.0",
-    "urijs": "^1.18.4"
+    "urijs": "^1.18.4",
+    "url-regex": "^4.0.0"
   }
 }
