--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "description": "A simple web crawler",
   "main": "dist/index.js",
-  "author": "George Allen",
-  "license": "MIT",
+  "author": "George Allen <george.allen93@outlook.com> (http://grgaln.com/)",
+  "license": "ISC",
   "scripts": {
     "prestart": "npm run build",
     "start": "babel-node examples/gocardless.js",
@@ -12,7 +12,8 @@
     "dev": "nodemon examples/gocardless.js",
     "prebuild": "npm run test && rimraf dist",
     "build": "babel src -d dist",
-    "test": "babel-node ./spec/run.js"
+    "test": "babel-node ./spec/run.js",
+    "prepublish": "npm run build"
   },
   "devDependencies": {
     "babel-cli": "^6.18.0",
