added bugs field to package.json

--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "main": "dist/index.js",
   "author": "George Allen <george.allen93@outlook.com> (http://grgaln.com/)",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/GeorgeA93/crawley/issues"
+  },
   "scripts": {
     "prestart": "npm run build",
     "start": "babel-node examples/gocardless.js",
